Fixing index page dark mode.

--- a/less/index.less
+++ b/less/index.less
@@ -255,6 +255,10 @@ a {
             padding-bottom: 60px;
         }
 
+        @media (prefers-color-scheme: dark) {
+            background: @red-darkmode;
+        }
+
         &--heading {
             font-weight: bold;
             color: #fff;
