--- a/less/shared/mixins-and-vars.less
+++ b/less/shared/mixins-and-vars.less
@@ -25,6 +25,7 @@
 
 // Dark Mode Colors
 @pink-darkmode: #EF7290;
+@red-darkmode: #5f031a;
 @color0-darkmode: #CE8989;
 @dark-mode-black: #121212;
 @dark-mode-lightgrey: #9a9a9a;
